demo/traefik-v2/k8s/01-traefik/05_deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: traefik-ingress-controller
  labels:
    app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress-controller
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.0
          args:
            - --api.dashboard
            - --accesslog
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.ping.address=:9000
            - --entrypoints.mongo.address=:27017
            - --log.level=debug
            - --providers.kubernetescrd
            - --providers.file.filename=/etc/traefik/dynamic_conf.yml
            - --certificatesResolvers.myLE.acme.email=manuel@containo.us
            - --certificatesResolvers.myLE.acme.caserver=https://pebble.pebble.svc.cluster.local/dir
            - --certificatesResolvers.myLE.acme.httpChallenge.entryPoint=web
            - --ping.entryPoint=ping

          ports:
            - name: http
              containerPort: 8000
            - name: https
              containerPort: 8443
            - name: ping
              containerPort: 9000
            - name: mongo
              containerPort: 27017
          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          volumeMounts:
            - name: config-volume
              mountPath: /etc/traefik
            - name: local-ca-cert
              mountPath: /etc/certs/
      volumes:
        - name: config-volume
          configMap:
            name: traefik-config
        - name: local-ca-cert
          secret:
            secretName: local-ca-certs
            items:
              - key: cert.pem
                path: cert.pem
