demo/traefik-v2/k8s/01-traefik/05_service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: mongo
      port: 27017
  selector:
    app: traefik-ingress-controller
  type: LoadBalancer
