demo/traefik-v2/k8s/01-traefik/07_ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: default
spec:
  entryPoints:
    - http
    - https
  routes:
     - match: Host(`dashboard.docker.localhost`)
       kind: Rule
       services:
         - name: traefik-ingress-controller
           port: 8080
